# rusqlite-windows

./: Cargo.toml
.github/: release.yaml
.github/workflows/: release.yaml
src/: main.rs
