[package]
name = "rusqlite-windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]

holo_hash = "0.2.0-beta-rc.3"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled-sqlcipher-vendored-openssl"]
